# components/dms2223frontend/dms2223frontend/data/rest/backendservice.py
@@ -96,4 +96,83 @@ class BackendService():
             response_data.add_message(response.content.decode('ascii'))
         return response_data
 
+    def get_discussion(self, token:  Optional[str], id: int) -> ResponseData:
+        response_data: ResponseData = ResponseData()
+        response: requests.Response = requests.get(
+            self.__base_url() + f'/discussions/{id}',
+            headers={
+                'Authorization': f'Bearer {token}',
+                self.__apikey_header: self.__apikey_secret
+            }
+        )
+        response_data.set_successful(response.ok)
+        if response_data.is_successful():
+            response_data.set_content(response.json())
+        else:
+            response_data.add_message(response.content.decode('ascii'))
+            response_data.set_content([])
+        return response_data
+
+
+    
+
+    def list_answers(self, token: Optional[str], id: int) -> ResponseData:
+        """ Requests a list of registered questions.
+
+        Args:
+            token (Optional[str]): The question session token.
+
+        Returns:
+            - ResponseData: If successful, the contents hold a list of user data dictionaries.
+              Otherwise, the contents will be an empty list.
+        """
+        response_data: ResponseData = ResponseData()
+        response: requests.Response = requests.get(
+            self.__base_url() + f'/discussions/{id}',
+            headers={
+                'Authorization': f'Bearer {token}',
+                self.__apikey_header: self.__apikey_secret
+            }
+        )
+        response_data.set_successful(response.ok)
+        if response_data.is_successful():
+            response_data.set_content(response.json())
+        else:
+            response_data.add_message(response.content.decode('ascii'))
+            response_data.set_content([])
+        return response_data
+
+
+    
+    def create_answer(self, token: Optional[str], discussionid: int, content: str) -> ResponseData:
+        """ Requests a discussion creation.
+
+        Args:
+            - token (Optional[str]): The discussion session token.
+            - title: A string with the discussion title.
+            - content: A string with the discussion content.
+
+        Returns:
+            - ResponseData: If successful, the contents hold a list of user data dictionaries.
+              Otherwise, the contents will be an empty list.
+        """
+        response_data: ResponseData = ResponseData()
+        response: requests.Response = requests.post(
+            self.__base_url() + f'/discussions/{discussionid}/answers',
+            json={
+                'discussionid': discussionid,
+                'content': content
+            },
+            headers={
+                'Authorization': f'Bearer {token}',
+                self.__apikey_header: self.__apikey_secret
+            }
+        )
+        response_data.set_successful(response.ok)
+        if response_data.is_successful():
+            response_data.set_content(response.json())
+        else:
+            response_data.add_message(response.content.decode('ascii'))
+        return response_data
+
    
